--- a/start.ini
+++ b/start.ini
@@ -1,7 +1,17 @@
 AXBufferSize=8192
 WeightBufferSize=8192
 OutputBufferSize=8192
-RAMQueueSize=8192
 AccDimension=32
-MemoryBandwidth=0
 ClockPeriod=1
+
+MaximumByteRead=64
+MaximumNumberRead=8
+UnitByteforNumber=8
+
+AColStartAddress=0x0020000000000000
+ARowStartAddress=0x0021000000000000
+XValStartAddress=0x0010000000000000
+XColStartAddress=0x0011000000000000
+XRowStartAddress=0x0012000000000000
+WeightStartAddress=0x0000000000000000
+OutputStartAddress=0x0030000000000000
